# dove

./: .gitignore  Cargo.toml  LICENSE
src/: app.rs  commands.rs  config.rs  discord.rs  main.rs
src/crypto/: aes256.rs  mod.rs
src/utils/: comm.rs  mod.rs  ui.rs
