[package]
name = "dove"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false
strip = true
lto = true

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", features = ["default"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"]}
serenity = "0.12.5" # Discord API
regex = "1.12.2"
global-hotkey = "0.7.0"
dirs = "6.0.0"
aes-gcm = "0.10.3"
sysinfo = "0.37.2"
